--- a/Index.html
+++ b/Index.html
@@ -210,7 +210,7 @@
       // Determinar el nombre del kit (si se escribe uno personalizado, se usa ese)
       kitName = customKitName ? customKitName : selectedKit;
 
-           // Obtener valores seleccionados
+      //       // Obtener valores seleccionados
       const itemId = document.getElementById('item-select').value;
       const quantity = document.getElementById('quantity').value;
       const location = document.getElementById('location-select').value;
@@ -229,7 +229,7 @@
       document.getElementById('output').innerText = `Comandos actuales:\n${commands.join('\n')}`;
 
       // Limpiar inputs para agregar más ítems sin perder el progreso
-      document.getElementById('quantity').value = 1;
+      document.getElementById('quantity').value = 1; // Restablecer cantidad a 1
     });
 
     // Función para generar y copiar todos los comandos
@@ -257,3 +257,5 @@
   </script>
 </body>
 </html>
+
+    
